osprey_worker/src/osprey/engine/ast_validator/validators/tests/test_validate_dynamic_calls_have_annotated_rvalue/test_invalid_annotation[List[str, str]].txt
error: unexpected additional variants to `List[...]`
--> main.sml:1:15
     |
   1 | Foo: List[str, str] = JsonData(path='$.foo')
     |                ^